-- Changes committed to source control since previous release

0.2.1007 - Added German translation, Floorball support, and automated playback. Fixes issues including XP SP3 install issue
FEAT - Added 20 triangular cones to the soccer field for documenting drills
FIX - Updated Saved Layout Information dialog to use labels of field objects instead of "tags"
FEAT - Added German translation of main user interface - translation courtesy of Ralph Rinschen
FEAT - Added Floorball field - code courtesy of Ulrich Jenzer
FEAT - Added support for "playing back" (or animating) the sequence - idea and some code courtesy of Ulrich Jenzer
FIX - Fixed installer on Windows XP SP3
CHG - Changed/added more icons in tool bar
FEAT - Added support for moving to the beginning or the end of a sequence

0.2.1005 - Various minor fixes and lots of build/release improvements
BUILD - Updated build environment to use more recent tools, Visual Studio 2008, .NET 3.5, Wix 3.0.4805.0, FxCop 1.36, and NAnt 0.86 Beta1
FIX - Exit menu item wasn't working. 
FIX - Fixed locating of installed documents and library files when installed using updated installers (that have bin folder).
BUILD - Added code analysis using FxCop to build process.
BUILD - Removed Votive project from solution to allow building solution without WiX.
BUILD - Added WiX build to NAnt build files, re-organized installer building slightly.
BUILD - Added NAnt build files to build main targets and build "release" target files.
BUILD - Various modifications to version generation, MSI installer building.
FEAT - Added Volleyball court - code courtesy of Lukas Kawalec (kadeon)
CHG - Made the hockey benches and penalty boxes slightly deeper and wider to fit players better.
CHG - Moved "root" menu back to "Sequence" menu and moved position of "Playing Surface" menu to end.
FEAT - Added menu items in Help menu linking to installed documents (readme, changelog, license)


0.2.0 - First useful version